# plugify-module-template

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  plugify-module-template.json  plugify-module-template.pmodule.in  template-lang-module.json  template-lang-module.pmodule  template-lang-module.pmodule.in
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  cmake-multiple-platform.yml
cmake/platform/: shared.cmake
conda/: bld.bat  build.sh  meta.yaml.example
src/: module.cpp  module.h  module.hpp
